Fix the milvus assignment and fix the health check blocking code