@@ -8,6 +8,8 @@ import org.lite.gateway.model.MetricPoint;
 import org.lite.gateway.model.TrendAnalysis;
 import org.lite.gateway.model.TrendDirection;
 import org.springframework.stereotype.Service;
+import reactor.core.publisher.Flux;
+import reactor.core.publisher.Mono;
 
 import java.util.ArrayList;
 import java.util.HashMap;
@@ -31,105 +33,124 @@ public class MetricsAggregator {
         this.objectMapper = objectMapper;
     }
 
-    public void addMetrics(String serviceId, Map<String, Double> newMetrics) {
+    public Mono<Void> addMetrics(String serviceId, Map<String, Double> newMetrics) {
+        if (newMetrics == null || newMetrics.isEmpty()) {
+            return Mono.empty();
+        }
+
         String redisKey = METRICS_KEY_PREFIX + serviceId;
         long timestamp = System.currentTimeMillis();
 
-        newMetrics.forEach((newMetric, value) -> {
-            try {
-                // Get existing points
-                String jsonPoints = cacheService.getHash(redisKey, newMetric).block();
-                List<MetricPoint> points = jsonPoints != null
-                        ? objectMapper.readValue(jsonPoints, new TypeReference<List<MetricPoint>>() {
-                        })
-                        : new ArrayList<>();
+        return Flux.fromIterable(newMetrics.entrySet())
+                .flatMap(entry -> {
+                    String newMetric = entry.getKey();
+                    Double value = entry.getValue();
 
-                // Add new point
-                points.add(new MetricPoint(newMetric, value, timestamp));
+                    return cacheService.getHash(redisKey, newMetric)
+                            .defaultIfEmpty("[]")
+                            .flatMap(jsonPoints -> {
+                                try {
+                                    List<MetricPoint> points = objectMapper.readValue(jsonPoints,
+                                            new TypeReference<List<MetricPoint>>() {
+                                            });
+                                    if (points == null) {
+                                        points = new ArrayList<>();
+                                    }
 
-                // Keep only the latest points
-                if (points.size() > DEFAULT_MAX_HISTORY_SIZE) {
-                    points = points.subList(points.size() - DEFAULT_MAX_HISTORY_SIZE, points.size());
-                }
+                                    // Add new point
+                                    points.add(new MetricPoint(newMetric, value, timestamp));
 
-                // Store updated points
-                String updatedJson = objectMapper.writeValueAsString(points);
-                cacheService.putHash(redisKey, newMetric, updatedJson).block();
-            } catch (JsonProcessingException e) {
-                log.error("Error storing new metrics for service {} metric {}: {}",
-                        serviceId, newMetric, e.getMessage());
-            }
-        });
+                                    // Keep only the latest points
+                                    if (points.size() > DEFAULT_MAX_HISTORY_SIZE) {
+                                        points = points.subList(points.size() - DEFAULT_MAX_HISTORY_SIZE, points.size());
+                                    }
+
+                                    // Store updated points
+                                    String updatedJson = objectMapper.writeValueAsString(points);
+                                    return cacheService.putHash(redisKey, newMetric, updatedJson);
+                                } catch (JsonProcessingException e) {
+                                    log.error("Error storing new metrics for service {} metric {}: {}",
+                                            serviceId, newMetric, e.getMessage());
+                                    return Mono.empty();
+                                }
+                            });
+                })
+                .then();
     }
 
-    public Map<String, TrendAnalysis> analyzeTrends(String serviceId) {
-        Map<String, TrendAnalysis> trends = new HashMap<>();
+    public Mono<Map<String, TrendAnalysis>> analyzeTrends(String serviceId) {
         String redisKey = METRICS_KEY_PREFIX + serviceId;
 
-        Map<String, String> entries = cacheService.getHashEntries(redisKey).block();
-        if (entries != null) {
-            entries.forEach((metric, jsonPoints) -> {
-                try {
-                    List<MetricPoint> points = objectMapper.readValue((String) jsonPoints,
-                            new TypeReference<List<MetricPoint>>() {
-                            });
-                    trends.put((String) metric, calculateTrend(points));
-                } catch (JsonProcessingException e) {
-                    log.error("Error analyzing trends for service {} metric {}: {}",
-                            serviceId, metric, e.getMessage());
-                }
-            });
-        }
-        return trends;
+        return cacheService.getHashEntries(redisKey)
+                .map(entries -> {
+                    Map<String, TrendAnalysis> trends = new HashMap<>();
+                    entries.forEach((metric, jsonPoints) -> {
+                        try {
+                            List<MetricPoint> points = objectMapper.readValue(jsonPoints,
+                                    new TypeReference<List<MetricPoint>>() {
+                                    });
+                            trends.put(metric, calculateTrend(points));
+                        } catch (JsonProcessingException e) {
+                            log.error("Error analyzing trends for service {} metric {}: {}",
+                                    serviceId, metric, e.getMessage());
+                        }
+                    });
+                    return trends;
+                })
+                .defaultIfEmpty(new HashMap<>());
     }
 
     private TrendAnalysis calculateTrend(List<MetricPoint> points) {
-        if (points.size() < 2)
+        if (points == null || points.size() < 2)
             return new TrendAnalysis(0.0, TrendDirection.STABLE);
 
-        MetricPoint recentPoint = points.getLast();
+        MetricPoint recentPoint = points.get(points.size() - 1);
         MetricPoint previousPoint = points.get(points.size() - 2);
         double recent = recentPoint.getValue();
         double previous = previousPoint.getValue();
         return TrendAnalysis.fromValues(recent, previous);
     }
 
-    public Map<String, List<MetricPoint>> getMetricsHistory(String serviceId) {
-        Map<String, List<MetricPoint>> history = new HashMap<>();
+    public Mono<Map<String, List<MetricPoint>>> getMetricsHistory(String serviceId) {
         String redisKey = METRICS_KEY_PREFIX + serviceId;
 
-        Map<String, String> entries = cacheService.getHashEntries(redisKey).block();
-        if (entries != null) {
-            entries.forEach((metric, jsonPoints) -> {
-                try {
-                    List<MetricPoint> points = objectMapper.readValue((String) jsonPoints,
-                            new TypeReference<List<MetricPoint>>() {
-                            });
-                    history.put((String) metric, points);
-                } catch (JsonProcessingException e) {
-                    log.error("Error retrieving metrics history for service {} metric {}: {}",
-                            serviceId, metric, e.getMessage());
-                }
-            });
-        }
-        return history;
+        return cacheService.getHashEntries(redisKey)
+                .map(entries -> {
+                    Map<String, List<MetricPoint>> history = new HashMap<>();
+                    entries.forEach((metric, jsonPoints) -> {
+                        try {
+                            List<MetricPoint> points = objectMapper.readValue(jsonPoints,
+                                    new TypeReference<List<MetricPoint>>() {
+                                    });
+                            history.put(metric, points);
+                        } catch (JsonProcessingException e) {
+                            log.error("Error retrieving metrics history for service {} metric {}: {}",
+                                    serviceId, metric, e.getMessage());
+                        }
+                    });
+                    return history;
+                })
+                .defaultIfEmpty(new HashMap<>());
     }
 
-    public void storeTrendAnalysis(String serviceId, Map<String, TrendAnalysis> trends) {
+    public Mono<Void> storeTrendAnalysis(String serviceId, Map<String, TrendAnalysis> trends) {
         try {
             String redisKey = METRICS_KEY_PREFIX + serviceId + ":trends";
             String jsonTrends = objectMapper.writeValueAsString(trends);
-            cacheService.set(redisKey, jsonTrends, java.time.Duration.ofDays(30)).block(); // Use reasonable expiration
+            return cacheService.set(redisKey, jsonTrends, java.time.Duration.ofDays(30));
         } catch (JsonProcessingException e) {
             log.error("Error storing trend analysis for service {}: {}", serviceId, e.getMessage());
+            return Mono.empty();
         }
     }
 
-    public Map<String, Double> getCurrentMetrics(String serviceId) {
-        return getMetricsHistory(serviceId).entrySet().stream()
-                .filter(entry -> !entry.getValue().isEmpty())
-                .collect(Collectors.toMap(
-                        Map.Entry::getKey,
-                        e -> e.getValue().get(e.getValue().size() - 1).getValue()));
+    public Mono<Map<String, Double>> getCurrentMetrics(String serviceId) {
+        return getMetricsHistory(serviceId)
+                .map(history -> history.entrySet().stream()
+                        .filter(entry -> !entry.getValue().isEmpty())
+                        .collect(Collectors.toMap(
+                                Map.Entry::getKey,
+                                e -> e.getValue().get(e.getValue().size() - 1).getValue())))
+                .defaultIfEmpty(new HashMap<>());
     }
 }
